@@ -143,5 +143,6 @@ HORAS TRABALHADAS: 8h
 ==========
 
 - Bugfixes
+- Inicio de implementacao de webservices para publicacao de itens do queue
 
-HORAS TRABALHADAS: 2h
+HORAS TRABALHADAS: 3h
